Fix: fixed event invitation link wrap

--- a/public/mystyles.scss
+++ b/public/mystyles.scss
@@ -89,21 +89,17 @@ div.tooltip-donut {
   font-family: 'Montserrat', sans-serif;
 }
 
+.message-break {
+  word-wrap: break-word;
+}
+
 @media (max-width: 770px) {
   .pink-image {
     display: none;
   }
 
-  .message-break {
-    overflow-wrap: anywhere;
-  }
-
   .logopadding {
     padding-top: 16px;
-  }
-
-  .message-break {
-    overflow-wrap: anywhere;
   }
 
   .logotype {
@@ -124,15 +120,6 @@ div.tooltip-donut {
   .pie-container {
     padding-left: 85px;
   }
-
-  // .message-break {
-  //   overflow-wrap: anywhere;
-  // }
-
-  // .logotype {
-  //   max-width: 280px;
-  //   padding-top: 12px;
-  // }
 }
 
 @media (max-width: 1030px) {
